--- a/asset/style/split.css
+++ b/asset/style/split.css
@@ -1,10 +1,10 @@
 .split-screen {
     display: flex;
-    height: 100vh;
+    height: 100rem;
   }
 
   .background {
-    width: 60%;
+    width: 50%;
     /* background-color: #000000; */
     /* background-image: url('asset/picture/background.svg'); */
     background-size: cover;
